--- a/app/views/layout/base.jade
+++ b/app/views/layout/base.jade
@@ -4,7 +4,7 @@ html
       if title
         = title
       else
-        | Node Starter kit
+        | Awesome site
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
     nav
