Fix(task): Correct path for routes

--- a/app/views/layout/base.jade
+++ b/app/views/layout/base.jade
@@ -8,7 +8,7 @@ html
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
     nav
-      a(href="/") Accueil 
+      a(href="/") Home 
 
     if flash
       .flash(class="#{flash.type}")
