--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,7 +1,7 @@
 extends ./layout/base
 
-block content
-  h1 Hello World
+block title
+  |Index
 
-  for book in books
-    h3= book.title
+block content
+  h1 Screencasts.ninja
