--- a/app/views/layout/base.jade
+++ b/app/views/layout/base.jade
@@ -1,10 +1,7 @@
 html
   head
     title
-      if title
-        = title
-      
-      |  - Awesome site
+      block title
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
     nav
