Modify title handling

--- a/app/views/layout/base.jade
+++ b/app/views/layout/base.jade
@@ -1,9 +1,7 @@
 html
   head
     title
-      if title
-        = title
-      
+      block title
       |  - Awesome site
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
