Add Books MVC for testing + update app.use declaration method

--- a/app/views/layout/base.jade
+++ b/app/views/layout/base.jade
@@ -5,8 +5,7 @@ html
       |  - Awesome site
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
-    nav
-      a(href="/") Home 
+    include ./navigation.jade
 
     if flash
       .flash(class="#{flash.type}")
